--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <title>Suitex</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/icono.jpg">
+  <link rel="icon" type="image/x-icon" href="assets/SuitexV4.png">
   
 </head>
 
